# assignments

./: .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  api.yml  manage.py  requirements.txt
assignments/: asgi.py  settings.py  urls.py  wsgi.py
backend/: README.md
backend/templates/: client_check.html
backend/tests/: check.http  create_checks.http  new_checks.http
devops/: .env  Makefile  gunicorn.sh  main.py  poetry.toml  pyproject.toml
devops/app/: config.py
devops/app/routers/: __init__.py  health.py
devops/deploy/chart/: .helmignore
devops/docs/: assignment.md  project_install.md
erp-frontend/: README.md  app.js  package-lock.json  package.json
frontend/: README.md  app.js  package-lock.json  package.json
mainapp/: admin.py  models.py  urls.py  views.py
mainapp/json/: info_order.json
mainapp/migrations/: 0001_initial.py
mainapp/templates/mainapp/: client_check.html  kitchen_check.html
site-frontend/: app.js  package.json
templates/: kitchen_check.html
