[tool.poetry]
name = "hello-world"
version = "0.0.1"
description = ""
authors = ["EclipseAltair <eclipsealtair@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
gunicorn = "^20.1.0"
uvloop = "^0.16.0"
httpx = "^0.19.0"
httptools = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
